app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
  --app-border-color: #475569a6;
  --background-gradient-dark: #1B2735;
  --background-gradient-darker: #090A0F;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-app-border: var(--app-border-color);
  --font-ruluko: var(--font-ruloko);
  --font-dmsans: var(--font-body);
  --font-heading: var(--font-ruluko);
  --font-body: var(--font-dmsans);
  --color-background-gradient-dark: var(--background-graient-dark);
  --color-background-gradient-darker: var(--background-graient-darker);
}

@layer base {
  body {
    font-family: var(--font-body);
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    font-family: var(--font-heading);
  }

  h1 {
    @apply text-3xl md:text-5xl;
  }

  h2 {
    @apply text-2xl md:text-4xl;
  }

  h3,
  h4,
  h5 {
    @apply text-xl md:text-2xl;
  }
}

@layer components {
  .section-container {
    @apply relative max-w-7xl mx-auto w-full pt-10;
  }

  .button-primary {
    @apply bg-slate-400 p-2.5 text-center text-slate-950 inline-block w-fit rounded-lg transition-colors duration-300 hover:bg-slate-300 focus:bg-slate-300 focus-within:bg-slate-300 ease-in-out text-base;
  }

  .button-secondary {
    @apply bg-slate-950 text-white hover:bg-slate-800 focus:bg-slate-800 focus-within:bg-slate-800 rounded-lg transition-colors duration-300 ease-in-out text-base;
  }

  .button-text-only {
    @apply text-white text-base hover:underline transition-transform duration-300 ease-in-out cursor-pointer hover:underline-offset-2;
  }

  .button-outline {
    @apply w-fit text-base border border-solid border-white text-white p-2.5 rounded-lg transition-colors duration-300 ease-in-out hover:bg-white focus:bg-white focus-within:bg-white hover:text-slate-900 focus:text-slate-900 focus-within:text-slate-900;
  }

  .button-outline--active {
    @apply bg-white text-slate-950;
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  background: radial-gradient(ellipse at bottom, var(--background-gradient-dark) 0%, var(--background-gradient-darker) 100%);
  color: var(--foreground);
  font-family: var(--font-body);
}

html {
  scroll-behavior: smooth;
}

section {
  scroll-margin-top: 50px;
}

